@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<object name="portal_properties">
+ <object remove="True" name="flowplayer_properties" meta_type="Plone Property Sheet">
+ </object>
+</object>
